[gd_scene load_steps=2 format=3 uid="uid://dwmedgtqjoby3"]

[ext_resource type="Script" uid="uid://bmvrnvrmxq2dk" path="res://source/client/gateway/ui/components/character_creation/human_customization_panel.gd" id="1_wm3ht"]

[node name="HumanCustomizationPanel" type="VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_wm3ht")

[node name="Title" type="Label" parent="."]
layout_mode = 2
text = "Customize"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="GenderSection" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="GenderSection"]
layout_mode = 2
text = "Gender"

[node name="GenderOptions" type="HBoxContainer" parent="GenderSection"]
layout_mode = 2

[node name="MaleButton" type="Button" parent="GenderSection/GenderOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Male"

[node name="FemaleButton" type="Button" parent="GenderSection/GenderOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Female"

[node name="AgeSection" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="AgeSection"]
layout_mode = 2
text = "Age"

[node name="AgeOptions" type="HBoxContainer" parent="AgeSection"]
layout_mode = 2

[node name="ChildButton" type="Button" parent="AgeSection/AgeOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Child"

[node name="TeenButton" type="Button" parent="AgeSection/AgeOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Teen"

[node name="AdultButton" type="Button" parent="AgeSection/AgeOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Adult"

[node name="SkinToneSection" type="VBoxContainer" parent="."]
process_mode = 4
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="SkinToneSection"]
layout_mode = 2
text = "Skin Tone"

[node name="SkinToneOptions" type="HBoxContainer" parent="SkinToneSection"]
layout_mode = 2

[node name="LightButton" type="Button" parent="SkinToneSection/SkinToneOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Light"

[node name="MediumButton" type="Button" parent="SkinToneSection/SkinToneOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Medium"

[node name="DarkButton" type="Button" parent="SkinToneSection/SkinToneOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Dark"

[node name="HairStyleSection" type="VBoxContainer" parent="."]
process_mode = 4
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="HairStyleSection"]
layout_mode = 2
text = "Hair Style"

[node name="HairStyleOptions" type="HBoxContainer" parent="HairStyleSection"]
layout_mode = 2

[node name="ShortButton" type="Button" parent="HairStyleSection/HairStyleOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Short"

[node name="LongButton" type="Button" parent="HairStyleSection/HairStyleOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Long"

[node name="BaldButton" type="Button" parent="HairStyleSection/HairStyleOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Bald"

[node name="PonytailButton" type="Button" parent="HairStyleSection/HairStyleOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Ponytail"

[node name="HairColorSection" type="VBoxContainer" parent="."]
process_mode = 4
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="HairColorSection"]
layout_mode = 2
text = "Hair Color"

[node name="HairColorOptions" type="HBoxContainer" parent="HairColorSection"]
layout_mode = 2

[node name="BlackButton" type="Button" parent="HairColorSection/HairColorOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Black"

[node name="BrownButton" type="Button" parent="HairColorSection/HairColorOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Brown"

[node name="BlondeButton" type="Button" parent="HairColorSection/HairColorOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Blonde"

[node name="RedButton" type="Button" parent="HairColorSection/HairColorOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Red"

[node name="WhiteButton" type="Button" parent="HairColorSection/HairColorOptions"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "White"
